Add pagination, refactoring
