# public/api.yaml
@@ -100,6 +100,14 @@ paths:
             enum:
               - done
               - process
+        - in: query
+          name: page
+          schema:
+            type: integer
+        - in: query
+          name: perPage
+          schema:
+            type: integer
     post:
       responses:
         '201':
@@ -110,6 +118,8 @@ paths:
         - Todo
       operationId: store
       summary: Add new todo
+      security:
+        - bearer: [ ]
       requestBody:
         content:
           application/x-www-form-urlencoded:
@@ -222,9 +232,9 @@ components:
           minLength: 1
         schedule_start:
           type: string
-          example: 10/18/2032 07:40 AM
-          default: m/d/Y h:i A
-          description: format m/d/Y h:i A
+          example: 2032-01-01 07:40
+          default: Y-m-d H:i
+          description: format Y-m-d H:i
   responses:
     UnauthorizedError:
       description: Access token is missing or invalid
